Fix display block alignment
Fixes #193

--- a/src/blocks/block-column-inner/styles/editor.scss
+++ b/src/blocks/block-column-inner/styles/editor.scss
@@ -263,5 +263,4 @@
 .ab-block-layout-column .wp-block-image,
 .ab-block-layout-column .wp-block-image .components-resizable-box__container {
 	max-width: 100% !important;
-	display: block;
 }
